--- a/fullstack_Mohammed_Abdulsalam.tex
+++ b/fullstack_Mohammed_Abdulsalam.tex
@@ -35,6 +35,8 @@
 \usepackage[normalem]{ulem} % provides "\ul" (uline) command which will break at line breaks
 
 \usepackage[english]{babel} % provides culturally determined typographical rules for wide range of languages
+
+\usepackage{import} % Import other from other *.tex files
 %-----------------------------------------
 
 \input glyphtounicode % converts glyph names to unicode
@@ -161,25 +163,16 @@
 %-----------CONTACT DETAILS------------------
 % Make sure all the details are correct, you can add more links in the first row of second column if needed
 
-\begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\Huge Mohammed Abdulsalam \vspace{2pt}} & % row = 1, col = 1
-  Location: Alexandria, Egypt \\ % row = 1, col = 2
-  % \href{https://jane-doe.com}{\uline{jane-doe.com}} $|$ % row = 2, col = 1
-  \href{https://linkedin.com/in/mohamed-abdullsalam-a297401b6}{\uline{LinkedIn}} $|$ % row = 2, col = 1
-  \href{https://github.com/Mohammed4mach}{\uline{GitHub}} $|$ % row = 2, col = 1
-  \href{https://codeforces.com/profile/Moha-mach}{\uline{Codeforces}} & % row = 2, col = 1
-  Email: \href{mailto:moha4mach@gmail.com}{\uline{moha4mach@gmail.com}} $|$ % row = 2, col = 2
-  Mobile: +20 12 1165 0982 \\ % row = 2, col = 2
-\end{tabular*}
+\import{includes/}{contact-details}
 %--------------------------------------------
 
 
 %-----------SUMMARY--------------------------
 % Keep this short, simple and straigth to point
 
-\section{Front End Developer}
+\section{Full Stack Developer}
 \small{
-  I am a highly skilled web developer with over \textbf{2 year of experience} in \textbf{HTML, CSS, Javascript}. I have knowledge of popular frameworks such as \textbf{React, and Vue.js} and experience with REST APIs.
+  I am a highly skilled web developer with over \textbf{2 year of experience} in \textbf{HTML, CSS, Javascript}, \textbf{1 year of experience} in \textbf{PHP, MySQL}. I have knowledge of popular frameworks such as \textbf{Laravel, React, and Vue.js}. I worked on several projects using native \textbf{PHP} and \textbf{MySQL/MariaDB}, and have experience designing REST APIs.
 }
 %--------------------------------------------
 
@@ -189,12 +182,13 @@
 
 \section{Technical Skills}
   \resumeHeadingListStart{}
-    \resumeSectionType{Languages}{:}{Javascript, HTML, CSS, SCSS}
-    \resumeSectionType{Frameworks}{:}{React.js}
-    \resumeSectionType{Libraries}{:}{React Router, Styled Components, Socket.IO}
+    \resumeSectionType{Languages}{:}{PHP, SQL, Javascript, HTML, CSS, SCSS, TeX}
+    \resumeSectionType{Frameworks}{:}{Laravel, React.js}
+    \resumeSectionType{Libraries}{:}{PHPUnit, PHP Spread Sheet, ECDSA, React Router, Styled Components, Socket.IO}
+    \resumeSectionType{Databases}{:}{MySQL, MariaDB, SQLlite}
     \resumeSectionType{Methodoligies}{:}{BEM}
-    \resumeSectionType{Concepts}{:}{OOP, Regular Expressions, Accessibility (WCAG), REST}
-    \resumeSectionType{Dev Tools}{:}{Vim, Visual Studio Code, Node, npm, Vite, Git, Github, Linux, Docker}
+    \import{includes/technical-skills/}{concepts}
+    \import{includes/technical-skills/}{tools}
   \resumeHeadingListEnd{}
 %--------------------------------------------
 
@@ -204,26 +198,9 @@
 
 \section{Experience}
 \resumeHeadingListStart{}
-  \resumeQuadHeading{Front End Developer Volunteer}{Jan 2023 -- Present}
-  {UCCD KSU}{Remote -- Kafrelsheikh, Kafrelsheikh, Egypt}
-    \resumeItemListStart{}
-      \resumeItem{Designed and developed dynamic and responsive student management website using \textbf{React.js}}
-      \resumeItem{Worked with \textbf{REST APIs} to retrieve and display data from backend}
-    \resumeItemListEnd{}
-
-  \resumeQuadHeading{Vice Head of Web Development Committee}{Sep 2022 -- Apr 2023}
-  {GDSC KSU}{Remote -- Kafrelsheikh, Kafrelsheikh, Egypt}
-    \resumeItemListStart{}
-      \resumeItem{Share knowledge and experience with my fellow members}
-      \resumeItem{Make sure the plan is suitable for members}
-      \resumeItem{Demonstrated critical topics in core \textbf{Front End} technologies, including \textbf{SEO}, and \textbf{Accessibility}, through number of sessions}
-    \resumeItemListEnd{}
-
-  \resumeQuadHeadingChild{Front End Developer}{Jul 2021 -- Present}
-  {Freelance}
-    \resumeItemListStart{}
-      \resumeItem{Design and development of websites using \textbf{HTML, CSS, and Javascript}}
-    \resumeItemListEnd{}
+  \import{includes/experience/}{frontend-uccd}
+  \import{includes/experience/}{vice-head-GDSC}
+  \import{includes/experience/}{fullstack-freelance}
 \resumeHeadingListEnd{}
 %---------------------------------------------
 
@@ -233,9 +210,7 @@
 
 \section{Education}
   \resumeHeadingListStart{}
-    \resumeQuadHeading{University of Kafrelsheikh -- Faculty of Computers and Information}{Kafrelsheikh, Kafrelsheikh, Egypt}
-    {Bachelor of Science in Computer Science}{Sep 2020 -- Jul 2024}
-    {GPA: 3.25/4}
+    \import{includes/education}{BSc-computer-science}
   \resumeHeadingListEnd{}
 %---------------------------------------------
 
@@ -252,26 +227,13 @@
     %     \resumeItem{Utilized \textbf{responsive design} to ensure compatibility across all devices}
     %     \resumeItem{Deployed on GitHub pages via GitHub Actions}
     %   \resumeItemListEnd{}
-    \resumeTrioHeading{\href{https://mohammed4mach.github.io/visual-sort-alg}{\uline{Visualizing Sorting Algorithms}}}{HTML, CSS, Javascript}{\href{https://github.com/Mohammed4mach/visual-sort-alg}{\uline{Source Code}}}
-      \resumeItemListStart{}
-        \resumeItem{Implemented different sorting algorithms in \textbf{Javascript}}
-        \resumeItem{Used \textbf{Asynchronous Programming} using \textbf{Javascript} to visualize sorting}
-        \resumeItem{Deployed on GitHub pages via GitHub Actions}
-      \resumeItemListEnd{}
-
-    \resumeTrioHeading{UCCD Website}{React.js, Git}{Private}
-      \resumeItemListStart{}
-        \resumeItem{Designed and developed a clean and modern website using \textbf{HTML, CSS, and Javascript}}
-        \resumeItem{Utilized \textbf{responsive design} to ensure compatibility across all devices}
-        \resumeItem{Communicated with backend using a \textbf{RESTful API}}
-      \resumeItemListEnd{}
-
-    \resumeTrioHeading{\href{https://mohammed4mach.github.io/Monopoly-game/}{\uline{Monopoly Game}}}{HTML, CSS, SCSS, Javascript}{\href{https://github.com/Mohammed4mach/Monopoly-game}{\uline{Source Code}}}
-      \resumeItemListStart{}
-        \resumeItem{Used \textbf{ECMA Modules} to reduce coupling}
-        \resumeItem{Worked with \textbf{CSS Grid and Flexbox} to simplify complex design}
-        \resumeItem{Deployed on GitHub pages via GitHub Actions}
-      \resumeItemListEnd{}
+    \import{includes/projects/}{visualizing-sorting-algorithms}
+\pagebreak
+    \import{includes/projects/}{UCCD-website}
+    \import{includes/projects/}{bookopia}
+    \import{includes/projects/}{salem-clinic-website}
+    \import{includes/projects/}{simple-api-framework}
+    \import{includes/projects/}{clinic-management-system.tex}
   \resumeHeadingListEnd{}
 %--------------------------------------------
 
