Add ITI Certificate

--- a/back-end_Mohammed_Abdulsalam.tex
+++ b/back-end_Mohammed_Abdulsalam.tex
@@ -226,4 +226,17 @@
   \resumeHeadingListEnd{}
 %--------------------------------------------
 
+
+%----------------OTHERS----------------------
+% You can add your acheivements, accolades, certifications etc. here.
+
+\section{Certifications}
+  \resumeItemListStart{}
+    \import{includes/certificates/}{iti-php}
+    % \resumeItem{\href{https://dummy-certification.com}{\uline{Certified Web Developer by the W3C}}}
+    % \resumeItem{\href{https://dummy-certification.com}{\uline{Microsoft Certified: Azure Developer Associate}}}
+    % \resumeItem{\href{https://dummy-certification.com}{\uline{AWS Certified Developer - Associate}}}
+  \resumeItemListEnd{}
+%--------------------------------------------
+
 \end{document}
