--- a/fullstack_Mohammed_Abdulsalam.tex
+++ b/fullstack_Mohammed_Abdulsalam.tex
@@ -241,12 +241,13 @@
 %----------------OTHERS----------------------
 % You can add your acheivements, accolades, certifications etc. here.
 
-% \section{Certifications}
-%   \resumeItemListStart{}
-%     \resumeItem{\href{https://dummy-certification.com}{\uline{Certified Web Developer by the W3C}}}
-%     \resumeItem{\href{https://dummy-certification.com}{\uline{Microsoft Certified: Azure Developer Associate}}}
-%     \resumeItem{\href{https://dummy-certification.com}{\uline{AWS Certified Developer - Associate}}}
-%   \resumeItemListEnd{}
+\section{Certifications}
+  \resumeItemListStart{}
+    \import{includes/certificates/}{iti-php}
+    % \resumeItem{\href{https://dummy-certification.com}{\uline{Certified Web Developer by the W3C}}}
+    % \resumeItem{\href{https://dummy-certification.com}{\uline{Microsoft Certified: Azure Developer Associate}}}
+    % \resumeItem{\href{https://dummy-certification.com}{\uline{AWS Certified Developer - Associate}}}
+  \resumeItemListEnd{}
 %--------------------------------------------
 
 \end{document}
