Add demos to projects

--- a/front-end_Mohammed_Abdulsalam.tex
+++ b/front-end_Mohammed_Abdulsalam.tex
@@ -228,6 +228,7 @@
     %   \resumeItemListEnd{}
     \import{includes/projects/}{visualizing-sorting-algorithms}
     \import{includes/projects/}{UCCD-website}
+    \pagebreak
     \import{includes/projects/}{bookopia}
     % \import{includes/projects/}{monopoly-game}
   \resumeHeadingListEnd{}
