--- a/includes/projects/UCCD-website.tex
+++ b/includes/projects/UCCD-website.tex
@@ -1,4 +1,7 @@
-\resumeTrioHeading{UCCD Website}{React.js, Git}{Private}
+\resumeQuadHeading{UCCD Website}
+{\href{https://mohammed4mach.github.io/my-cvs/demos/uccd-demo_2x.mp4}{\uline{Demo}}}
+{React.js, Git}
+{Private}
   \resumeItemListStart{}
     \resumeItem{Designed and developed a clean and modern website using \textbf{HTML, CSS, and Javascript}}
     \resumeItem{Utilized \textbf{responsive design} to ensure compatibility across all devices}
