--- a/includes/projects/clinic-management-system.tex
+++ b/includes/projects/clinic-management-system.tex
@@ -1,4 +1,4 @@
-\resumeTrioHeading{Clinic Management System / ERP System}{PHP, MariaDB, Socket.IO}{Private}
+\resumeTrioHeading{Clinic Management System (ERP)}{PHP, MariaDB, Socket.IO}{Private}
   \resumeItemListStart{}
     \resumeItem{A \textbf{CRUD application} exposed using a RESTful API made with PHP}
     \resumeItem{Analysed stakeholders requirements, deigned \textbf{ERD} based on this analysis}
