--- a/includes/projects/bookopia.tex
+++ b/includes/projects/bookopia.tex
@@ -1,4 +1,7 @@
-\resumeTrioHeading{Bookopia}{PHP, Laravel, MVC, SCSS}{\href{https://github.com/Mohammed4mach/library-management-system-laravel}{\uline{Source Code}}}
+\resumeQuadHeading{Bookopia}
+{\href{https://mohammed4mach.github.io/my-cvs/demos/bookopia-demo_2x.mp4}{\uline{Demo}}}
+{PHP, Laravel, MVC, SCSS}
+{\href{https://github.com/Mohammed4mach/library-management-system-laravel}{\uline{Source Code}}}
   \resumeItemListStart{}
     \resumeItem{A library management system written in \textbf{PHP / Laravel}. Build with \textbf{MVC} architectural pattern}
     \resumeItem{Designed and developed a clean and modern website using \textbf{HTML, and SCSS}}
