Add Online Chat Project

--- a/back-end_Mohammed_Abdulsalam.tex
+++ b/back-end_Mohammed_Abdulsalam.tex
@@ -183,8 +183,8 @@
 \section{Technical Skills}
   \resumeHeadingListStart{}
     \resumeSectionType{Languages}{:}{PHP, SQL, Javascript, TeX}
-    \resumeSectionType{Frameworks}{:}{Laravel}
-    \resumeSectionType{Libraries}{:}{PHPUnit, PHP Spread Sheet, ECDSA}
+    \resumeSectionType{Frameworks}{:}{Laravel, PHPUnit}
+    \resumeSectionType{Libraries}{:}{laravel-websockets, laravel-medialibrary, laravel-echo}
     \resumeSectionType{Databases}{:}{MySQL, MariaDB, SQLlite}
     \import{includes/technical-skills/}{concepts}
     \import{includes/technical-skills/}{tools}
@@ -219,9 +219,10 @@
 
 \section{Projects}
   \resumeHeadingListStart{}
+    \import{includes/projects/}{online-chat}
     \import{includes/projects/}{bookopia}
     \import{includes/projects/}{salem-clinic-website}
-    \import{includes/projects/}{simple-api-framework}
+    % \import{includes/projects/}{simple-api-framework}
     \import{includes/projects/}{clinic-management-system}
   \resumeHeadingListEnd{}
 %--------------------------------------------
