--- a/front-end_Mohammed_Abdulsalam.tex
+++ b/front-end_Mohammed_Abdulsalam.tex
@@ -184,7 +184,7 @@
   \resumeHeadingListStart{}
     \resumeSectionType{Languages}{:}{Javascript, HTML, CSS, SCSS}
     \resumeSectionType{Frameworks}{:}{React.js}
-    \resumeSectionType{Libraries}{:}{React Router, Styled Components, Socket.IO}
+    \resumeSectionType{Libraries}{:}{react-router, styled-components, Socket.IO}
     \resumeSectionType{Methodoligies}{:}{BEM}
     \import{includes/technical-skills/}{concepts}
     \import{includes/technical-skills/}{tools}
