--- a/fullstack_Mohammed_Abdulsalam.tex
+++ b/fullstack_Mohammed_Abdulsalam.tex
@@ -183,8 +183,8 @@
 \section{Technical Skills}
   \resumeHeadingListStart{}
     \resumeSectionType{Languages}{:}{PHP, SQL, Javascript, HTML, CSS, SCSS, TeX}
-    \resumeSectionType{Frameworks}{:}{Laravel, React.js}
-    \resumeSectionType{Libraries}{:}{PHPUnit, PHP Spread Sheet, ECDSA, React Router, Styled Components, Socket.IO}
+    \resumeSectionType{Frameworks}{:}{Laravel, PHPUnit, React.js}
+    \resumeSectionType{Libraries}{:}{laravel-websockets, laravel-medialibrary, laravel-echo, react-router, styled-components, Socket.IO}
     \resumeSectionType{Databases}{:}{MySQL, MariaDB, SQLlite}
     \resumeSectionType{Methodoligies}{:}{BEM}
     \import{includes/technical-skills/}{concepts}
@@ -227,12 +227,12 @@
     %     \resumeItem{Utilized \textbf{responsive design} to ensure compatibility across all devices}
     %     \resumeItem{Deployed on GitHub pages via GitHub Actions}
     %   \resumeItemListEnd{}
-    \import{includes/projects/}{visualizing-sorting-algorithms}
-\pagebreak
+    % \import{includes/projects/}{visualizing-sorting-algorithms}
+    \import{includes/projects/}{online-chat}
     \import{includes/projects/}{UCCD-website}
     \import{includes/projects/}{bookopia}
     \import{includes/projects/}{salem-clinic-website}
-    \import{includes/projects/}{simple-api-framework}
+    % \import{includes/projects/}{simple-api-framework}
     \import{includes/projects/}{clinic-management-system.tex}
   \resumeHeadingListEnd{}
 %--------------------------------------------
