--- a/includes/technical-skills/tools.tex
+++ b/includes/technical-skills/tools.tex
@@ -1,1 +1,1 @@
-\resumeSectionType{Dev Tools}{:}{Vim, Visual Studio Code, XDebug, Vite, Git, Github, Apache HTTP Server, Linux, cron, Docker, Insomnia}
+\resumeSectionType{Dev Tools}{:}{Vim, XDebug, Vite, Git, Github Actions, Apache HTTP Server, Linux, cron, Docker}
