--- a/front-end_Mohammed_Abdulsalam.tex
+++ b/front-end_Mohammed_Abdulsalam.tex
@@ -172,7 +172,7 @@
 
 \section{Front End Developer}
 \small{
-  I am a highly skilled web developer with over \textbf{3 year of experience} in \textbf{HTML, CSS, Javascript}. I have knowledge of popular frameworks such as \textbf{React, and Vue.js} and experience with REST APIs.
+  I am a highly skilled software engineer with over \textbf{4 year of experience} in \textbf{HTML, CSS, Javascript}. I have knowledge of popular frameworks such as \textbf{React, and Vue.js} and experience with REST APIs.
 }
 %--------------------------------------------
 
@@ -197,7 +197,7 @@
 
 \section{Experience}
 \resumeHeadingListStart{}
-  \import{includes/experience/}{frontend-uccd}
+  \import{includes/experience/}{fullstack-storiagate}
   \import{includes/experience/}{vice-head-GDSC}
   \import{includes/experience/}{frontend-freelance}
 \resumeHeadingListEnd{}
@@ -227,7 +227,6 @@
     %     \resumeItem{Deployed on GitHub pages via GitHub Actions}
     %   \resumeItemListEnd{}
     \import{includes/projects/}{visualizing-sorting-algorithms}
-    \import{includes/projects/}{UCCD-website}
     \pagebreak
     \import{includes/projects/}{bookopia}
     % \import{includes/projects/}{monopoly-game}
