--- a/fullstack_Mohammed_Abdulsalam.tex
+++ b/fullstack_Mohammed_Abdulsalam.tex
@@ -172,7 +172,7 @@
 
 \section{Full Stack Developer}
 \small{
-  I am a highly skilled web developer with over \textbf{3 year of experience} in \textbf{HTML, CSS, Javascript}, \textbf{2 year of experience} in \textbf{PHP, MySQL}. I have knowledge of popular frameworks such as \textbf{Laravel, React, and Vue.js}. I worked on several projects using native \textbf{PHP} and \textbf{MySQL/MariaDB}, and have experience designing REST APIs.
+  I am a highly skilled software engineer with over \textbf{4 year of experience} in \textbf{HTML, CSS, Javascript}, \textbf{3 year of experience} in \textbf{PHP, MySQL}. I have knowledge of popular frameworks such as \textbf{Laravel, React, and Vue.js}. I worked on several projects using native \textbf{PHP} and \textbf{MySQL/MariaDB}, as well as projects using \textbf{Laravel}, and have experience designing REST APIs.
 }
 %--------------------------------------------
 
@@ -198,7 +198,7 @@
 
 \section{Experience}
 \resumeHeadingListStart{}
-  \import{includes/experience/}{frontend-uccd}
+  \import{includes/experience/}{fullstack-storiagate}
   \import{includes/experience/}{vice-head-GDSC}
   \import{includes/experience/}{fullstack-freelance}
 \resumeHeadingListEnd{}
@@ -229,7 +229,6 @@
     %   \resumeItemListEnd{}
     % \import{includes/projects/}{visualizing-sorting-algorithms}
     \import{includes/projects/}{online-chat}
-    \import{includes/projects/}{UCCD-website}
     \import{includes/projects/}{bookopia}
     \import{includes/projects/}{salem-clinic-website}
     % \import{includes/projects/}{simple-api-framework}
