--- a/includes/experience/fullstack-freelance.tex
+++ b/includes/experience/fullstack-freelance.tex
@@ -3,6 +3,7 @@
   \resumeItemListStart{}
     \resumeItem{Design and development of websites using \textbf{HTML, CSS, and Javascript}}
     \resumeItem{Desing and development of back-ends using \textbf{PHP, MYSQL/MariaDB}}
+    \resumeItem{Added features and fixed bugs for live systems with legacy code}
     \resumeItem{Worked on REST APIs for medium-sized systems}
     \resumeItem{Analysis of stakeholders reuirements, and design \textbf{ERD}, \textbf{SRS}, and various documents}
     \resumeItem{Deployed and maintained websites on \textbf{AWS EC2} linux server}
