--- a/includes/experience/vice-head-GDSC.tex
+++ b/includes/experience/vice-head-GDSC.tex
@@ -2,7 +2,6 @@
 {GDSC KSU}{Remote -- Kafrelsheikh, Kafrelsheikh, Egypt}
   \resumeItemListStart{}
     \resumeItem{Share knowledge and experience with my fellow members}
-    \resumeItem{Make sure the plan is suitable for members}
-    \resumeItem{Demonstrated critical topics in core \textbf{Front End} technologies, including \textbf{SEO}, and \textbf{Accessibility}, through number of sessions}
+    \resumeItem{Demonstrated critical topics in core \textbf{Front End} technologies, including \textbf{SEO}, and \textbf{Accessibility}}
 \resumeItemListEnd{}
 
