--- a/back-end_Mohammed_Abdulsalam.tex
+++ b/back-end_Mohammed_Abdulsalam.tex
@@ -172,7 +172,7 @@
 
 \section{Back End Developer}
 \small{
-    I am a highly skilled back-end devleoper with over \textbf{2 year of experience} in \textbf{PHP, MySQL}. I have knowledge of popular frameworks such as \textbf{Laravel}. I worked on several projects using native \textbf{PHP} and \textbf{MySQL/MariaDB}, and have experience designing REST APIs.
+  I am a highly skilled software engineer with over \textbf{3 year of experience} in \textbf{PHP, MySQL}. I have knowledge of popular frameworks such as \textbf{Laravel}. I worked on several projects using native \textbf{PHP} and \textbf{MySQL/MariaDB}, as well as projects using \textbf{Laravel}, and have experience designing REST APIs.
 }
 %--------------------------------------------
 
@@ -197,6 +197,7 @@
 
 \section{Experience}
 \resumeHeadingListStart{}
+  \import{includes/experience/}{fullstack-storiagate}
   \import{includes/experience}{backend-freelance}
 
   \import{includes/experience}{vice-head-GDSC}
