--- a/includes/technical-skills/concepts.tex
+++ b/includes/technical-skills/concepts.tex
@@ -1,2 +1,2 @@
-\resumeSectionType{Concepts}{:}{OOP, MVC, HMVC, Regular Expressions, Accessibility (WCAG), REST, OAuth, ERD Design, SRS Design}
+\resumeSectionType{Concepts}{:}{OOP, Design Patterns, Regular Expressions, Accessibility (WCAG), REST, OAuth, ERD Design, SRS Design}
 
