--- a/fullstack_Mohammed_Abdulsalam.tex
+++ b/fullstack_Mohammed_Abdulsalam.tex
@@ -172,7 +172,7 @@
 
 \section{Full Stack Developer}
 \small{
-  I am a highly skilled software engineer with over \textbf{4 year of experience} in \textbf{HTML, CSS, Javascript}, \textbf{3 year of experience} in \textbf{PHP, MySQL}. I have knowledge of popular frameworks such as \textbf{Laravel, React, and Vue.js}. I worked on several projects using native \textbf{PHP} and \textbf{MySQL/MariaDB}, as well as projects using \textbf{Laravel}, and have experience designing REST APIs.
+  I am a highly skilled software engineer with over \textbf{4 years of experience} in \textbf{HTML, CSS, and Javascript}, and \textbf{3 years of experience} in \textbf{PHP and MySQL}. I know popular frameworks such as \textbf{Laravel and React}. I worked on several projects using native \textbf{PHP} and \textbf{MySQL/MariaDB}, as well as projects using \textbf{Laravel}, and have experience designing REST APIs.
 }
 %--------------------------------------------
 
