--- a/front-end_Mohammed_Abdulsalam.tex
+++ b/front-end_Mohammed_Abdulsalam.tex
@@ -172,7 +172,7 @@
 
 \section{Front End Developer}
 \small{
-  I am a highly skilled software engineer with over \textbf{4 year of experience} in \textbf{HTML, CSS, Javascript}. I have knowledge of popular frameworks such as \textbf{React, and Vue.js} and experience with REST APIs.
+  I am a highly skilled software engineer with over \textbf{4 years of experience} in \textbf{HTML, CSS, and Javascript}. I know popular frameworks such as \textbf{React} and experience with REST APIs.
 }
 %--------------------------------------------
 
