--- a/includes/projects/online-chat.tex
+++ b/includes/projects/online-chat.tex
@@ -3,7 +3,7 @@
 {PHP, Laravel, HMVC, SCSS}
 {Private}
   \resumeItemListStart{}
-    \resumeItem{Online customer service chat written in \textbf{PHP / Laravel}. Build with \textbf{HMVC} architectural pattern}
+    \resumeItem{Online customer service chat written in \textbf{PHP / Laravel}. Built with \textbf{HMVC} architectural pattern}
     \resumeItem{Utilized \textbf{laravel-websockets} \& \textbf{laravel-echo} to provide real time communication}
     \resumeItem{Used \textbf{laravel-medialibrary} to facilitate media storing and retrieval}
     \resumeItem{Developed \textbf{REST API} for clients, and chat frontend using \textbf{Blade} and \textbf{Javascript}}
