--- a/includes/experience/fullstack-freelance.tex
+++ b/includes/experience/fullstack-freelance.tex
@@ -5,7 +5,7 @@
     \resumeItem{Desing and development of back-ends using \textbf{PHP, MYSQL/MariaDB}}
     \resumeItem{Added features and fixed bugs for live systems with legacy code}
     \resumeItem{Worked on REST APIs for medium-sized systems}
-    \resumeItem{Analysis of stakeholders reuirements, and design \textbf{ERD}, \textbf{SRS}, and various documents}
-    \resumeItem{Deployed and maintained websites on \textbf{AWS EC2} linux server}
+    \resumeItem{Analysis of stakeholders' requirements, and design \textbf{ERD}, \textbf{SRS}, and various documents}
+    \resumeItem{Deployed and maintained websites on \textbf{AWS EC2} Linux server}
 \resumeItemListEnd{}
 
