--- a/includes/experience/fullstack-storiagate.tex
+++ b/includes/experience/fullstack-storiagate.tex
@@ -5,7 +5,7 @@
     \resumeItem{Made reusable components and modules using \textbf{PHP, SCSS, and Javascript}}
     \resumeItem{Ensure the cross-browser compatibility of the components}
     \resumeItem{Developed localization utilities - same interface as \textbf{Laravel} - to support multible languages}
-    \resumeItem{Refactored the codebase to reduce complexity and redundancy, and to enhance cohesion}
-    \resumeItem{Maintained the website on a linux server}
+    \resumeItem{Refactored the codebase to reduce complexity and redundancy, and enhance cohesion}
+    \resumeItem{Maintained the website on a Linux server}
 \resumeItemListEnd{}
 
