--- a/includes/projects/clinic-management-system.tex
+++ b/includes/projects/clinic-management-system.tex
@@ -1,7 +1,7 @@
 \resumeTrioHeading{Clinic Management System (ERP)}{PHP, MariaDB, Socket.IO}{Private}
   \resumeItemListStart{}
     \resumeItem{A \textbf{CRUD application} exposed using a RESTful API made with PHP}
-    \resumeItem{Analysed stakeholders requirements, deigned \textbf{ERD} based on this analysis}
+    \resumeItem{Analysed stakeholders' requirements, deigned \textbf{ERD} based on this analysis}
     \resumeItem{Used \textbf{XDebug} to facilitate debugging process, and \textbf{PHPUnit} to automate unit testing}
     \resumeItem{Worked on many features that support bussiness logic, includes live queues, activity log, authorization rules and priviliges, payroll system, patient management system, etc\ldots}
     \resumeItem{Used \textbf{Socket.IO} under \textbf{Node.js} to build socket server to maintain live queues data between clients}
