--- a/includes/experience/backend-freelance.tex
+++ b/includes/experience/backend-freelance.tex
@@ -3,7 +3,7 @@
   \resumeItemListStart{}
     \resumeItem{Desing and development of back-ends using \textbf{PHP, MYSQL/MariaDB}}
     \resumeItem{Worked on REST APIs for medium-sized systems}
-    \resumeItem{Analysis of stakeholders reuirements, and design \textbf{ERD}, \textbf{SRS}, and various documents}
-    \resumeItem{Deployed and maintained websites on \textbf{AWS EC2} linux server}
+    \resumeItem{Analysis of stakeholders' requirements, and design \textbf{ERD}, \textbf{SRS}, and various documents}
+    \resumeItem{Deployed and maintained websites on \textbf{AWS EC2} Linux server}
   \resumeItemListEnd{}
 
