--- a/includes/education/BSc-computer-science.tex
+++ b/includes/education/BSc-computer-science.tex
@@ -1,3 +1,3 @@
 \resumeQuadHeading{University of Kafrelsheikh -- Faculty of Computers and Information}{Kafrelsheikh, Kafrelsheikh, Egypt}
 {Bachelor of Science in Computer Science}{Sep 2020 -- Jun 2024}
-{GPA: 3.3/4}
+{GPA: 3.24/4 (With Honors)}
